theme4/theme4.css
/******************************** GENERAL STYLES ********************************/
body {
	background: var(--bg-page);
	color: var(--text);
	--sidebar-width: 16em;
	display: grid;
	grid-template-columns: 1fr min(var(--post-width), calc(100% - var(--sidebar-width))) var(--sidebar-width) 1fr;
}
a {
	color: var(--links);
	transition: color .2s;
}
a:not(:hover) { text-decoration: none }
a:hover { color: var(--links-hover) }
strong, b { color: var(--bold) }
em, i:not(.fas, .far) { color: var(--italics) }
h1, h2 {
	color: var(--headings);
	font-family: var(--title-font);
}
/* Text highlighting */
::selection {
	background-color: var(--highlight-bg);
	color: var(--highlight);
}
::moz-selection {
	background-color: var(--highlight-bg);
	color: var(--highlight);
}
/* Accessibility skipper */
#skip {
	position: fixed;
	top: -100em;
}

/* Roundness */
#pageheader a, #title,
#blogavatar,
#asklink, #submitlink, #description,
#taglinks a,
form,
#blogpages,
#credit-ra a,
#buttons > div,
.page.title,
.post, .postfooter > *, .postfooter div i, .sharelinks .dropdown,
#notes, #notes .avatar, #notes .more_notes_link, #notes .notes_loading,
.user .usericon,
.read_more,
.postbody .chat,
.postbody .link,
.photowrapper .highres,
.audiowrapper, .audiowrapper .albumart, .audiowrapper .custom_audio_buttons, .audiowrapper .custom_audio_seekbar,
.postbody .ask,
.pagination:not(.noimages), .pagination.noimages a {
	border-radius: var(--roundness);
}
/* Roundness (top) */
#blogpages a:first-child,
.postheader,
.post .title:first-child a {
	border-top-left-radius: var(--roundness);
	border-top-right-radius: var(--roundness);
}
/* Roundness (right) */
form input {
	border-top-right-radius: var(--roundness);
	border-bottom-right-radius: var(--roundness);
}
/* Roundness (bottom) */
#blogpages a:last-child {
	border-bottom-left-radius: var(--roundness);
	border-bottom-right-radius: var(--roundness);
}

/* Tippy tooltips styling */
.tippy-box[data-theme~="standard"] {
	background-color: var(--post);
	color: var(--text);
	border: 0.15em solid var(--border);
}
.tippy-box[data-theme~="standard"][data-placement^="top"] > .tippy-arrow::before {
	border-top-color: var(--post);
	filter: drop-shadow(0 0.2em var(--border))
}
.tippy-box[data-theme~="standard"][data-placement^="bottom"] > .tippy-arrow::before {
	border-bottom-color: var(--post);
	filter: drop-shadow(0 -0.2em var(--border))
}
.tippy-box[data-theme~="standard"][data-placement^="left"] > .tippy-arrow::before {
	border-left-color: var(--post);
	filter: drop-shadow(0.2em 0 var(--border))
}



/********************************* PAGE HEADER *********************************/
#pageheader {
	background: var(--accent1);
	grid-column: 1 / span 4;
	display: grid;
	grid-template-columns: auto 1fr auto;
	align-items: center;
	column-gap: 1em;
	padding: 0.5em 1em;
}
#pageheader.sticky {
	position: sticky;
	top: 0;
	z-index: 2;
}
#pageheader.nochrono { grid-template-columns: auto 1fr }
#title {
	padding: 0.5rem;
	min-height: var(--title-height);
	border: 0.3rem solid var(--border);
	display: flex;
	align-items: center;
	justify-content: center;
	text-align: center;
}
#title h1 { margin: 0 }
#hiddentitle {
	font-size: 1rem;
	position: fixed;
	top: -100em;
}
#pageheader a:not(#title) {
	background: var(--accent2);
	display: flex;
	--size: 2.5rem;
	width: var(--size);
	height: var(--size);
	align-items: center;
	justify-content: center;
	font-size: 1.5em;
}



/***************************** MAIN CONTENT SECTION *****************************/
main {
	background: rgba(var(--bg--rgb), var(--bg-opacity));
	padding: 0.75em 0.5em;
}
/* Special page titles */
.page.title {
	background: var(--accent1);
	border: 0.25em solid var(--border);
	margin: 1em 0 1.5em;
	text-align: center;
	padding: 0.75em 1em;
}
.page.title:first-child { margin-top: 0 }
.page.title h2, .page.title p { margin: 0 }
.page.title .tag::before { content: "#" }
.page.title .search_query::before { content: "\201C" }
.page.title .search_query::after { content: "\201D" }
.post.no-posts {
	padding: 0 1em;
	text-align: center;
}
/* Ask page FAQ */
.askwrapper:not(:empty) + iframe { margin-top: 15px }
/* Posts */
.post, #notes {
	background-color: var(--post);
	margin: 1em 0;
	border: 0.25em solid var(--border);
}
.post:first-child { margin-top: 0 }
/* Post header; notes, dates, and like/reblog buttons */
.postheader {
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	align-items: center;
	background: var(--accent2);
	padding: 0.25em 0.5em;
}
.postnotecount i { margin-right: 0.5em }
.postdate {
	grid-column: 2;
	justify-self: center;
}
.likereblog {
	grid-column: 3;
	justify-self: end;
	display: flex;
	column-gap: 0.5em;
	align-items: center;
}
.pinnedpost { color: var(--headings) }
.customlike { position: relative }
.customlike .like_button.liked + i { color: var(--like) }
.customlike iframe {
	position: absolute;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	z-index: 1;
	opacity: 0;
}
/* Post body */
.user, #notes li {
	display: grid;
	grid-template-columns: 2em 1fr;
	column-gap: 0.5em;
	align-items: center;
}
.user,
#notes li.like a,
#notes li.reblog span > a { text-transform: uppercase }
:not(.ask) > .user.deactivated .username::after,
.postbody .ask .user.deactivated .username a::after {
	content: " (deactivated)";
	font-size: 0.9em;
	opacity: 0.5;
}
.bodyitem {
	margin: 0.5em 1em;
	padding: 0.5em 0;
}
.bodyitem:last-child, .postbody > .bodyitemcontent:last-child { padding-bottom: 0; margin-bottom: 0 }
.bodyitem:not(:last-child) { border-bottom: 0.1em solid var(--border) }
.postbody > .bodyitemcontent { padding: 0.5em 1em }
.bodyitem .bodyitemcontent { padding: 0.75em 0.5em 0.5em 1em; }
.bodyitemcontent :first-child, .question :first-child { margin-top: 0 }
.bodyitemcontent :last-child, .question :last-child { margin-bottom: 0 }
.post .title { margin: 0 }
.post .title a {
	display: block;
	text-align: center;
	background: var(--accent1);
	padding: 0.3em 0.5em;
}
/* ... */

